# fast-stars

./: .env.example  .gitignore  dump.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 179e15d85a47_ton_address_has_been_added_to_withdraw_.py  1ceba9cf572d_withdrawal_requests_are_added.py  28a6087dba63_added_is_vip_variable_for_promocode.py  28d205f1bc55_new_slot_machine_game.py  2f2a3d3cc053_adding_referral_table.py  30119cd034c9_added_new_giveaway_model_and_.py  48b893a72174_new_subscription_logs_and_relationship_.py  5ff015e3e31a_add_username_field_to_giveaways.py  690d5cb4e66d_added_required_subscription_field_to_.py  6f38a4ace2af_new_vip_subscription_table_removed_is_.py  7ab65628eb21_added_new_field_max_activations_to_.py  8bc0d7bdd539_deposit_functionality_added.py  9024a4248ccc_create_channels_table.py  954461272dc1_new_2xgame_added.py  98e2c1e7f76b_added_timezone_to_giveaway.py  9b8ca54c1348_adding_cube_game_table.py  9d1700b92761_create_channels_table.py  c51d15ac03b9_add_username_to_task.py  e1ebb1c8ce9c_game_settings_table_has_been_added.py  e1ff269bf917_tasks_and_task_completion_logs_are_added.py  e416aec1349c_deposit_created_at_changed_to_use_utc_.py  e8d06886f0c3_new_basketball_logs_relationship_with_.py  ee7a120aa69a_updated_giveaway_model.py  f76506ca4a7d_added_promo_codes.py
fast_stars_bot/: alembic.ini  pyproject.toml
fast_stars_bot/alembic/versions/: 19a1d3634b1d_change_balance_and_bonus_to_numeric_.py  1ceba9cf572d_withdrawal_requests_are_added.py  9b8ca54c1348_adding_cube_game_table.py  (+8 more)
src/fast_stars_bot/: bot.py  migrate_data.py
(+163 files in other folders)
